# back/src/models/product.py
@@ -1,4 +1,7 @@
 from django.db import models
 class Product(models.Model):
-    question_text = models.CharField(max_length=200)
+    name = models.CharField(max_length=200)
+    description = models.TextField()
+    image = models.ImageField(upload_to='images')
+    price = models.FloatField()
 
